[gd_scene load_steps=3 format=3 uid="uid://c5ari1g22sgbn"]

[ext_resource type="Script" uid="uid://dyuap6y77btwt" path="res://Scripts/UI/BattleMenu.gd" id="1_2k7ho"]
[ext_resource type="PackedScene" uid="uid://clauivk5prmhg" path="res://Scenes/UI/Menus/battle_reward_popup.tscn" id="2_onp7g"]

[node name="BattleMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_2k7ho")

[node name="Options" type="Control" parent="."]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Fight" type="Button" parent="Options"]
custom_minimum_size = Vector2(400, 250)
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -200.0
offset_top = -250.0
offset_right = 200.0
grow_horizontal = 2
grow_vertical = 0
text = "FIGHT"

[node name="Inventory" type="Button" parent="Options"]
custom_minimum_size = Vector2(200, 125)
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_top = -125.0
offset_right = 200.0
grow_vertical = 0
text = "MY STUFF	"

[node name="Attacks" type="Control" parent="."]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="HBoxContainer" type="HBoxContainer" parent="Attacks"]
custom_minimum_size = Vector2(400, 250)
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -960.0
offset_top = -250.0
offset_right = 960.0
grow_horizontal = 2
grow_vertical = 0
theme_override_constants/separation = 100
alignment = 1

[node name="Low" type="Button" parent="Attacks/HBoxContainer"]
custom_minimum_size = Vector2(400, 250)
layout_mode = 2
text = "LOW-ROLL
(1-4)"

[node name="Full" type="Button" parent="Attacks/HBoxContainer"]
custom_minimum_size = Vector2(400, 250)
layout_mode = 2
text = "FULL ROLL
(1-12)"

[node name="High" type="Button" parent="Attacks/HBoxContainer"]
custom_minimum_size = Vector2(400, 250)
layout_mode = 2
text = "HIGH-ROLL
(10-12)"

[node name="Targets" type="Control" parent="."]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="HBoxContainer" type="HBoxContainer" parent="Targets"]
custom_minimum_size = Vector2(400, 250)
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -960.0
offset_top = -250.0
offset_right = 960.0
grow_horizontal = 2
grow_vertical = 0
theme_override_constants/separation = 100
alignment = 1

[node name="BattleRewardPopup" parent="." instance=ExtResource("2_onp7g")]
visible = false
layout_mode = 1

[node name="TurnOrder" type="VBoxContainer" parent="."]
custom_minimum_size = Vector2(250, 75)
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -250.0
offset_top = -432.0
offset_right = 250.0
offset_bottom = 432.0
grow_horizontal = 0
grow_vertical = 2
alignment = 1

[connection signal="pressed" from="Options/Fight" to="." method="_on_fight_pressed"]
[connection signal="pressed" from="Options/Inventory" to="." method="_on_heal_pressed"]
[connection signal="pressed" from="Attacks/HBoxContainer/Low" to="." method="_on_low_pressed"]
[connection signal="pressed" from="Attacks/HBoxContainer/Full" to="." method="_on_full_pressed"]
[connection signal="pressed" from="Attacks/HBoxContainer/High" to="." method="_on_high_pressed"]
